# headache-plus-plus

./: README.md
Financial_Engineering/Assignment1/: Assignment1.workspace
Financial_Engineering/Assignment1/.ctagsd/: file_list.txt
Financial_Engineering/Assignment1/ex1/: compile_flags.txt
Financial_Engineering/Assignment1/ex2/: compile_flags.txt  ex2.project
Financial_Engineering/Assignment1/ex3/: ex3  ex3.project
Financial_Engineering/Assignment2/: CMakeLists.txt  README.txt  main.cpp  order.h  order_manager.h  order_manager_v1.cpp  order_manager_v2.cpp
Financial_Engineering/Assignment2/Executable Objects/: order_manager_v1  order_manager_v2
Financial_Engineering/Assignment3/code/: CMakeCache.txt  Makefile  cmake_install.cmake
Financial_Engineering/Project/: BSAnalytics.h  CsvFeeder.cpp  CsvFeeder.h  CubicSmile.cpp  CubicSmile.h  Date.cpp  Date.h  Msg.h  VolSurfBuilder.h  compile_flags.txt  step1  step1.cpp  step2  step2.cpp  step3  step3.cpp
Financial_Engineering/Project/Solver/: RootSearcher.h
Financial_Engineering/Project/TestData/: BTC_output.csv  ETL.ipynb  test_step2.csv  test_step3.csv
Financial_Engineering/temp/: CsvFeeder copy.cpp  CsvFeeder copy.h  Msg copy.h  step1 copy.cpp
QF633_Financial_Engineering/Assignment1/.codelite/: Assignment1-leon_cai.tags  Assignment1.session
QF633_Financial_Engineering/Assignment1/ex1/: ex1  ex1.cpp  ex1.project
QF633_Financial_Engineering/Assignment1/ex2/: ex2  ex2.cpp
QF633_Financial_Engineering/Assignment1/ex3/: ex3.cpp  (+1 more)
Udemy/Basics/: basics.workspace
Udemy/Section4/: Section4.workspace
(+87 files in other folders)
